# scHiCEigen

./: CMakeLists.txt  README.md
embedding/: .#reproducibility.cpp  reproducibility copy.cpp  reproducibility.cpp  reproducibility.h
load/: ContactMaps.cpp  ContactMaps.h  load_hic_file.cpp  load_hic_file.h  processing_utils.cpp  processing_utils.h
test/: test_reproducibility.cpp
