cmake_minimum_required(VERSION 3.15)

project(scHiCEigen)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules")
add_definitions(-DHAVE_CBLAS=1)
find_package(OpenMP REQUIRED)
find_package(BLAS REQUIRED)
find_package(LAPACK REQUIRED)
find_package (Eigen3 3.3 REQUIRED NO_MODULE)
#find_package(MKL REQUIRED)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS_RELEASE "Release")
set(MKL_THREAD_LAYER "TBB")
if (OPENMP_FOUND)
    message(OPENMP FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
add_executable(scHiCEigen embedding/reproducibility.cpp embedding/reproducibility.h load/ContactMaps.cpp load/ContactMaps.h load/load_hic_file.cpp load/load_hic_file.h test/test_reproducibility.cpp load/processing_utils.h load/processing_utils.cpp)
if (MSVC)
    set(CMAKE_EXE_LINKER_FLAGS /MANIFEST:NO)
endif ()
#target_link_libraries(scHiCEigen ${MKL_LIBRARIES})
target_link_libraries(scHiCEigen OpenMP::OpenMP_CXX  -march=native Eigen3::Eigen -static-libgcc -static-libstdc++)


message(STATUS "BLAS VENDOR:    " ${BLA_VENDOR})
message(STATUS "BLAS LIBRARIES: " ${BLAS_LIBRARIES})

target_link_libraries(scHiCEigen ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})